--- a/seletive/empresa/templates/nova_empresa.html
+++ b/seletive/empresa/templates/nova_empresa.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="body-box">
-                <form action="{% url 'nova_empresa' %}" method="POST" enctype="multipart/form-data">
+                <form action="{% url 'nova_empresa' %}" method="POST" enctype="multipart/form-data">{% csrf_token %}
                     <div class="row">
                         <div class="col-md">
                             <label>Nome:</label>
