--- a/seletive/empresa/templates/empresa.html
+++ b/seletive/empresa/templates/empresa.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load filtro %}
 
 {% block 'head' %}
 
@@ -53,23 +54,28 @@
                         <th>Ação</th>
                     </tr>
 
-                    
-                        <tr class="tabela-linha" >
-                            <td>Nome da empresa</td>
-                            <td>Endereço da empresa</td>
-                            <td>
-                                <select class="form-select">       
-                                    <option></option>                    
-                                </select>
-                            </td>
-                            <td>
-                                Quantidade de vagas
-                            </td>
-                            <td>
-                                <a class="btn-excluir">Excluir empresa</a>
-                            </td>
-                        </tr>
-                    
+                        {% for empresa in empresas %}
+
+                            <tr {% if not forloop.counter|is_par %} class="tabela-linha" {% endif %}>
+                                <td>{{empresa.nome}}</td>
+                                <td>{{empresa.endereco}}</td>
+                                <td>
+                                    
+                                    <select class="form-select">   
+                                        {% for tech in empresa.tecnologias.all %} 
+                                            <option>{{tech}}</option>                    
+                                        {% endfor %}
+                                    </select>
+                                </td>
+                                <td>
+                                    Quantidade de vagas
+                                </td>
+                                <td>
+                                    <a class="btn-excluir">Excluir empresa</a>
+                                </td>
+                            </tr>
+
+                        {% endfor %}
                 </table>
             </div>
 
