--- a/seletive/empresa/templates/empresa.html
+++ b/seletive/empresa/templates/empresa.html
@@ -4,7 +4,7 @@
 
 {% block 'head' %}
 
-    <link href="{% static 'empresa/css/empresa.css' %}" rel="stylesheet">
+    <link href="{% static 'empresa/css/empresas.css' %}" rel="stylesheet">
 
 {% endblock %}
 
@@ -26,7 +26,7 @@
             <div class="borda-box"></div>
             <div class="body-box">
             
-                <form>
+                <form action="{% url 'empresa' %}" method="GET">{% csrf_token%}
                 <div class="row">
                     
                         <div class="col-md-5">
@@ -35,7 +35,9 @@
 
                         <div class="col-md-4">
                             <select class="form-select" name="tecnologias">
-                                <option value="">--------</option>
+                                {% for tech in tecnologias%}
+                                    <option value="{{tech.id}}">{{tech}}</option>
+                                {% endfor %}
                             </select>
                         </div>
                     
