--- a/seletive/empresa/templates/empresa_unica.html
+++ b/seletive/empresa/templates/empresa_unica.html
@@ -143,7 +143,9 @@
                         <div class="col-md">
                             <label>Empresa:</label>
                             <select name="empresa" class="form-select">
-                                                                                                                                 
+                                {% for empresa_iter in empresas%} 
+                                    <option {% if empresa.id == empresa_iter.id %} selected {% endif %} value="{{empresa_iter.id}}">{{empresa_iter}}</option>
+                                {% endfor %}
                             </select>
                         </div>
        
